@@ -1,0 +1,1 @@
+MD5 8d41c9c057a26f2d6cbabd7d373aae19 anaphora-0.9.2.tar.gz 2628
