@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/cl-anaphora
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lisp/cvs-repo/gentoo-x86/dev-lisp/cl-anaphora/Attic/ChangeLog,v 1.1 2004/03/03 22:36:01 mkennedy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lisp/cvs-repo/gentoo-x86/dev-lisp/cl-anaphora/Attic/ChangeLog,v 1.2 2004/05/09 01:44:21 mkennedy Exp $
+
+*cl-anaphora-0.9.2 (08 May 2004)
+
+  08 May 2004; <mkennedy@gentoo.org> +cl-anaphora-0.9.2.ebuild:
+  New upstream version.
 
 *cl-anaphora-0.9.1 (03 Mar 2004)
 
